<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Search View -->
        <LinearLayout
            android:id="@+id/searchView"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/searchview_outline"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_search"
                app:tint="#91C789" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/cari_promo_informasi_atau_produk"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <!-- Kategori Tabs -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/searchView">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_menu"
                app:tint="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <HorizontalScrollView
            android:id="@+id/hrz_searchview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tx_semua_kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semua_kategori"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/tx_sayuran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/sayuran"
                    android:textColor="#075F5C"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tx_daging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daging"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/tx_buah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buah"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/tx_telur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telur"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/tx_ayam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ayam"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/tx_hidangan_laut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hidangan_laut"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/tx_minuman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/minuman"
                    android:padding="12dp"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/tx_makanan_ringan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/makanan_ringan"
                    android:padding="12dp"
                    android:textColor="@color/primary" />

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSayuran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hrz_searchview"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/sayuran_card_item" />

        <TextView
            android:id="@+id/txt_menu_hari_ini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerViewSayuran"
            android:text="@string/menu_masakan_hari_ini"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_menu_hari_ini">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"

                android:background="@drawable/background_radius"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <!-- ImageView -->
                <ImageView
                    android:id="@+id/menu_food"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_marginStart="0dp"
                    android:src="@drawable/food_menu"
                    app:layout_constraintEnd_toStartOf="@+id/mahasiswa"
                    app:layout_constraintHorizontal_bias="0.123"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Card untuk Kategori Mahasiswa -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/mahasiswa"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/mahasiswa"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/menu_food"
                    app:layout_constraintEnd_toStartOf="@+id/pasangan_muda"
                    app:layout_constraintVertical_chainStyle="packed">

                    <!-- Isi Card Mahasiswa -->

                    <ImageView
                        android:id="@+id/img_mahasiswa"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:contentDescription="Gambar Mahasiswa"
                        android:scaleType="centerCrop"
                        android:src="@drawable/student" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="85dp"
                        android:background="#91C789"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Mahasiswa"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="1 Orang"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- LinearLayout untuk teks di bawah -->
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="8dp"
                    android:background="@color/pasangan_muda"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/mahasiswa"
                    app:layout_constraintStart_toStartOf="@+id/mahasiswa"
                    app:layout_constraintEnd_toEndOf="@+id/mahasiswa">

                </androidx.cardview.widget.CardView>




                <!-- Card untuk Kategori Pasangan Muda -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/pasangan_muda"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/pasangan_muda"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mahasiswa"
                    app:layout_constraintEnd_toStartOf="@+id/keluarga_kecil"
                    app:layout_constraintVertical_chainStyle="packed">

                    <ImageView
                        android:id="@+id/img_pasangan"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:contentDescription="Gambar pasangan"
                        android:scaleType="centerCrop"
                        android:src="@drawable/couple" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="85dp"
                        android:background="#91C789"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Pasangan Muda"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="2 Orang"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- Card untuk Kategori Keluarga Kecil -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/keluarga_kecil"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/keluarga_kecil"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pasangan_muda"
                    app:layout_constraintEnd_toStartOf="@+id/keluarga_besar"
                    app:layout_constraintVertical_chainStyle="packed">

                    <ImageView
                        android:id="@+id/img_keluarga_kecil"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:contentDescription="Gambar Keluarga kecil"
                        android:scaleType="centerCrop"
                        android:src="@drawable/small_family" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="85dp"
                        android:background="#91C789"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Keluarga kecil"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="3 Orang"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- Card untuk Kategori Keluarga Besar -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/keluarga_besar"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/keluarga_besar"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/keluarga_kecil"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <ImageView
                        android:id="@+id/img_keluarga_besar"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:contentDescription="Gambar keluarga besar"
                        android:scaleType="centerCrop"
                        android:src="@drawable/big_family" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="85dp"
                        android:background="#91C789"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Keluarga Besar"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="6 Orang"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>



    </RelativeLayout>
</ScrollView>
